# stringsimile

./: Cargo.toml  Cross.toml  Makefile  README.md  SPEC.md  benches.html  deny.toml
.github/workflows/: build.yml  ci.yml
crates/stringsimile-config/: Cargo.toml
crates/stringsimile-config/src/: lib.rs  rules.rs  rulesets.rs
crates/stringsimile-matcher/: Cargo.toml
crates/stringsimile-matcher/benches/: rules.rs  rulesets.rs
crates/stringsimile-matcher/src/: lib.rs  preprocessors.rs  rule.rs  rules.rs  ruleset.rs
crates/stringsimile-matcher/src/rules/: bitflip.rs  cidr.rs  confusables.rs  damerau_levenshtein.rs  hamming.rs  jaccard.rs  jaro.rs  jaro_winkler.rs  levenshtein.rs  match_rating.rs  metaphone.rs  mod.rs  nysiis.rs  regex.rs  soundex.rs
dev/bench/: data.js
distribution/: config.yaml
distribution/container/: Containerfile.alpine  Containerfile.debian  Containerfile.debian-static
distribution/rules/: example.json  example.jsonl
distribution/systemd/: stringsimile.service
doc/: README.md  configuration.md  kafka.md  main.md  metrics.md  rules-configuration.md  stringsimile-config.5.scd  stringsimile-rule-config.5.scd  stringsimile.1.scd
doc/man/: stringsimile-config.5.scd  stringsimile-kafka.7.scd  stringsimile-metrics.7.scd  stringsimile-rule-config.5.scd  stringsimile-validate.1.scd  stringsimile.1.scd
