[workspace]
members = [ "bin/stringsimile-service","crates/stringsimile-matcher"]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/Quad9DNS/stringsimile"

[workspace.dependencies]
stringsimile-matcher = { path = "./crates/stringsimile-matcher" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
tokio = { version = "1.44.2" }
