[workspace]
members = [ "bin/stringsimile-service", "crates/stringsimile-config","crates/stringsimile-matcher"]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/Quad9DNS/stringsimile"

[workspace.dependencies]
stringsimile-matcher = { path = "./crates/stringsimile-matcher" }
stringsimile-config = { path = "./crates/stringsimile-config" }

async-stream = { version = "0.3.6" }
clap = { version = "4.5.36" }
exitcode = { version = "1.1.2" }
futures = { version = "0.3.31" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
strsim = { version = "0.11.1" }
tokio = { version = "1.44.2" }
tokio-stream = { version = "0.1.17" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
triple_accel = { version = "0.4.0" }
