[workspace]
members = [ "bin/stringsimile-service", "crates/stringsimile-config","crates/stringsimile-matcher"]
resolver = "2"

[workspace.package]
authors = ["John Todd <jtodd@quad9.net>", "Ensar Sarajčić <dev@ensarsarajcic.com>"]
description = "Take a target string in JSON-structured stream (kafka) or file form and compare it against a large set of other strings using rules such as Levenshtein, Jaro, Soundex, IDN Confusables and more."
edition = "2024"
repository = "https://github.com/Quad9DNS/stringsimile"
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/Quad9DNS/stringsimile"
version = "0.2.0"

[workspace.dependencies]
stringsimile-matcher = { path = "./crates/stringsimile-matcher" }
stringsimile-config = { path = "./crates/stringsimile-config" }

arc-swap = { version = "1.8.1" }
async-stream = { version = "0.3.6" }
clap = { version = "4.5.36" }
confusables = { version = "0.1.0" }
criterion = { version = "0.5.1" }
exitcode = { version = "1.1.2" }
futures = { version = "0.3.31" }
lazy_static = { version = "1.5.0" }
metrics = { version = "0.24.2" }
metrics-exporter-prometheus = { version = "0.17.0" }
metrics-util = { version = "0.19.1" }
rdkafka = { version = "0.37.0" }
rphonetic = { version = "3.0.3" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
serde_yaml = { version = "0.9.34" } # Look for replacement
snafu = { version = "0.8.5" }
strsim = { version = "0.11.1" }
sysinfo = { version = "0.35.0" }
tempfile = { version = "3.20.0" }
tokio = { version = "1.44.2" }
tokio-stream = { version = "0.1.17" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
triple_accel = { version = "0.4.0" }
walkdir = { version = "2.5.0" }
