[package]
name = "stringsimile-config"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
stringsimile-matcher.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true
