[package]
name = "stringsimile-config"
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
stringsimile-matcher.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true

[lib]
bench = false
