[package]
name = "stringsimile-matcher"
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["all"]
all = ["rules-levenshtein", "rules-hamming", "rules-jaro", "rules-jaro-winkler", "rules-confusables", "rules-damerau-levenshtein", "rules-soundex", "rules-metaphone", "rules-nysiis", "rules-match-rating", "rules-bitflip", "rules-regex", "rules-cidr"]
rules-bitflip = ["dep:lazy_static"]
rules-cidr = ["dep:ipnet"]
rules-confusables = ["dep:confusables"]
rules-damerau-levenshtein = ["dep:triple_accel"]
rules-hamming = ["dep:triple_accel"]
rules-jaro = ["dep:strsim"]
rules-jaro-winkler = ["dep:strsim"]
rules-levenshtein = ["dep:triple_accel"]
rules-match-rating = ["dep:rphonetic"]
rules-metaphone = ["dep:rphonetic"]
rules-nysiis = ["dep:rphonetic"]
rules-regex = ["dep:regex"]
rules-soundex = ["dep:rphonetic"]

[dependencies]
confusables = { workspace = true, optional = true }
hashbrown.workspace = true
ipnet = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
metrics.workspace = true
regex = { workspace = true, optional = true }
rphonetic = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
strsim = { workspace = true, optional = true }
tracing.workspace = true
triple_accel = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true

[lib]
bench = false

[[bench]]
name = "rules"
harness = false

[[bench]]
name = "rulesets"
harness = false
